Transfer Vehicle Status
From Vehicles Table to Vehicle-Assignments Table
